2006-05-15  Alexander Malysh <amalysh at kannel.org>
  * gw/smsc/smsc_at.c: fixed wrong condition for octstr_len(temp).
    Thanks to Andrija Petrovic <andrija.petrovic at software888.com> for patch.
    [Msg-Id: <446B1C5B.50500@software888.com>]

2006-05-15  Alexander Malysh <amalysh at kannel.org>
  * doc/userguide/userguide.xml, gw/smsbox.c, gw/smsc/smsc_smpp.c: applied
    patch that changes internal charset from iso-8859-1 to windows-1252.
    This patch changes not the whole kannel to use windows-1252 but we
    want to change to UTF-8 as internal charset anyway and this patch could
    be seen as a temporarely workaround that allows sending/receiving of euro
    sign.
    Thanks to Peter Christensen <pch at coolsystems.dk> for the patch.
    [Msg-Id: <4461EA8F.5040806@coolsystems.dk>]

2006-05-14  Stipe Tolj  <stolj at kannel.org>
  * gw/bb_smscconn.c: fixing bug #341, causing not to obey 'sms-resend-retry'
    for messages that are temporary failing.
    Thanks to Martin Conte <reflejo@gmail.com> for provided patch.
    [Msg-Id: <92cf04420605130116h7ea562aew7c2ec7ded92dfb1e@mail.gmail.com>]

2006-05-11  Alexander Malysh <amalysh at kannel.org>
  * gw/smsc/smsc_at.c: Added sanity check on digits before calling the
    octstr_append_char. smsc_at does not check the digits of the address
    field in the function at2_format_address_field. So, if the recipient's
    address contains a non-numeric string (e.g. 'Info Service'), and that's
    quite possible, the octstr assertion crashes the bearerbox during
    octstr_append_char.
    Thanks to Andrija Petrovic <andrija.petrovic at software888.com> for
    provided patch.

2006-05-11  Alexander Malysh <amalysh at kannel.org>
  * gw/smsc/smsc_http.c:
    - Returning HTTP_OK status code 200 when receiving an MO from clickatell
    - Returning HTTP_BAD_REQUEST status code 400 is sent when "Insufficient 
      arguments, rejected"
    - fixed compiler warnings about unused variables